# Koka

./: .gitignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
public/: splashscreen.html
src/: App.css  App.jsx  Store.jsx  api.js
src-tauri/: .gitignore  Cargo.toml  chromedriver.lo  tauri.conf.json
src-tauri/src/: chrome_functions.rs  custom_errors.rs  database_functions.rs  event_processor.rs  helper_functions.rs  macros.rs  main.rs  objects.rs  program_setup.rs  services.rs  tauri_command_backends.rs  tauri_commands.rs
src-tauri/src/tauri_backend/: class_combinations.rs  credentials.rs  event_processor.rs  mod.rs  process_classes.rs  scrape_classes.rs
src/CalendarGrid 2.05.46 PM/: CalendarGrid.jsx
src/Scheduler/: CourseManagementPanel.jsx  Scheduler.jsx  Scheduler.module.css
src/components/: Calendar.jsx  Courses.jsx  Dining.jsx  Home.jsx  Organisms.jsx  Settings.jsx  Sidebar.jsx  Store.jsx
src/components/CalendarGrid/: CalendarGrid.jsx  CalendarGrid.module.css  CalendarModals.jsx  processEvents.jsx
src/components/Courses/: Courses.jsx  Courses.module.css
src/components/Cute/Cute/: Cute.jsx
src/components/Dining/: Dining.jsx
src/components/Gallery/: Gallery.jsx
src/components/Home/: Home.jsx
src/components/Scheduler/: CalendarGrid.jsx  CalendarGrid.module.css  CourseManagementPanel.jsx  Scheduler.jsx  Scheduler.module.css  ScrollSelector.jsx  ScrollSelector.module.css
src/components/Scheduler/CalendarGrid/: CalendarGrid.jsx  CalendarGrid.module.css  CalendarModals.jsx
src/components/Settings/: Settings.jsx  Settings.module.css
src/components/Sidebar/: Sidebar.jsx  Sidebar.module.css  SidebarContext.jsx
