[package]
name = "plover"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32.0", features = ["bundled"] }
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1"
# webdriver = "0.51.0"
thirtyfour = "0.34.0"
# webdriver-install = "=0.3.1"
fantoccini = "0.19.3"  # For WebDriver installation
reqwest = { version = "0.11", features = ["blocking"] }
zip = "0.5"
anyhow = "1.0"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
