[package]
name = "Plover"
version = "0.1.0"
description = "An app for NCSU daily management; Mainly for a personal project"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.36.0", features = ["bundled"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
thirtyfour = "0.34.0"
reqwest = { version = "0.11", features = ["json"] }
zip = "0.5"
anyhow = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.30.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
